--- a/src/index.css
+++ b/src/index.css
@@ -16,6 +16,7 @@
 
     --sidebar-width: 275px;
     --game-card-width: 210px;
+    --game-card-border-radius: 0;
     --pfm-card-width: 450px;
     --icon-size: 30px;
     --modal-fade-duration: 250ms;
